--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,18 +45,12 @@
             {
                 <li onclick="location.href='@Url.Action("Index","Customers")'"><i class="fas fa-users"></i><span>العملاء</span></li>
             }
-            @if (permissions.Contains("Suppliers_Read"))
-            {
-                <li onclick="location.href='@Url.Action("Index","Suppliers")'"><i class="fas fa-truck"></i><span>الموردين</span></li>
-            }
+          
             @if (permissions.Contains("SalesInvoices_Read"))
             {
                 <li onclick="location.href='@Url.Action("Index","SalesInvoices")'"><i class="fas fa-file-invoice-dollar"></i><span>فواتير المبيعات</span></li>
             }
-            @if (permissions.Contains("PurchaseInvoices_Read"))
-            {
-                <li onclick="location.href='@Url.Action("Index","PurchaseInvoices")'"><i class="fas fa-file-invoice"></i><span>فواتير المشتريات</span></li>
-            }
+        
             @if (permissions.Contains("Returns_Read"))
             {
                 <li onclick="location.href='@Url.Action("Index","Returns")'"><i class="fas fa-undo"></i><span>المردودات</span></li>
@@ -119,6 +113,48 @@
         </ul>
     </li>
 }
+
+
+@if (permissions.Contains("Maintenance_View"))
+{
+    <li class="sidebar-dropdown">
+        <div class="dropdown-header">
+            <i class="fas fa-tools"></i>
+            <span>الصيانات</span>
+            <i class="fas fa-chevron-down arrow"></i>
+        </div>
+
+        <ul class="dropdown-menu">
+
+            @if (permissions.Contains("Maintenance_Create"))
+            {
+                <li onclick="location.href='@Url.Action("Create","Maintenance")'">
+                    <span>عملية صيانة جديدة</span>
+                </li>
+            }
+
+            @if (permissions.Contains("Maintenance_View"))
+            {
+                <li onclick="location.href='@Url.Action("Index","Maintenance")'">
+                    <span>الصيانة الداخلية</span>
+                </li>
+            }
+
+            @if (permissions.Contains("Maintenance_External"))
+            {
+                <li onclick="location.href='@Url.Action("External","Maintenance")'">
+                    <span>الصيانة الخارجية (زيارات)</span>
+                </li>
+            }
+
+            <li onclick="location.href='@Url.Action("Index","Maintenance")'">
+                <span>كل الصيانات</span>
+            </li>
+
+        </ul>
+    </li>
+}
+
         </ul>
     </div>
 
